refact & fixes: improve css | use 12 itm in page | improve css on mobile | scroll to top btn css improve

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,3 +20,19 @@
         background-color: #F3F3F3;
     }
 }
+
+@media (max-width: 767px) {
+    .movies-container {
+        margin-top: 60px;
+        margin-bottom: 30px;
+        box-sizing: border-box;
+    }
+
+    footer {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        z-index: 100;
+    }
+}
