--- a/src/app/components/movie-card/movie-card.component.scss
+++ b/src/app/components/movie-card/movie-card.component.scss
@@ -3,7 +3,7 @@
     flex-direction: row;
     flex-wrap: nowrap;
     max-width: 420px;
-    height: 140px;
+    height: 143px;
     box-shadow: 0 0 11px 0 #E8E5E5;
 
     .card-infos {
