--- a/src/app/components/movie-info/movie-info.component.scss
+++ b/src/app/components/movie-info/movie-info.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 7px;
 
     .movie-info {
         display: flex;
@@ -11,7 +11,7 @@
         .info-property {
             font-size: 10px;
             background-color: #F3F3F3;
-            max-width: 50px;
+            width: 50px;
             text-align: center;
             margin-bottom: 3px;
             border-radius: 3px;
